--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@ footer{margin-top:12px;color:var(--muted);text-align:center;font-size:13px}
     <div class="title">
       <h1 id="mainTitle">Personal Hygiene & Dental Education — Interactive Quiz (v3)</h1>
       <p>70-question comprehensive quiz • spaced repetition • export/import state</p>
+    <p>A study material for Àdúràgbèmí, answered prayers... </p>
     </div>
   </div>
 
@@ -334,7 +335,7 @@ footer{margin-top:12px;color:var(--muted);text-align:center;font-size:13px}
     </aside>
   </div>
 
-  <footer>All content based on the provided Personal Hygiene & Dental Education document. Use the export/import tools to share or preload progress.</footer>
+  <footer>Made with on goal in mind, your success. <br> Let be be a testament to how much I love and cherish you. </footer>
 </div>
 
 <input id="fileLoader" type="file" accept="application/json" class="hidden">
@@ -963,4 +964,5 @@ window._PHv3 = { QUESTIONS, state, exportState, importStateText, startOrReset };
 </script>
 </body>
 </html>
+
 
