--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@ body{
 }
 .title h1{margin:0;font-size:20px}
 .title p{margin:0;color:var(--muted);font-size:13px}
+.her {
+  color: var(--danger);
+  font-size: 16px;
+}
 .controls{display:flex;gap:10px;margin:14px 0;align-items:center;flex-wrap:wrap}
 .btn{
   background:var(--accent);color:white;border:none;padding:10px 14px;border-radius:10px;cursor:pointer;font-weight:600;
@@ -207,7 +211,7 @@ footer{margin-top:12px;color:var(--muted);text-align:center;font-size:13px}
     <div class="title">
       <h1 id="mainTitle">Personal Hygiene & Dental Education — Interactive Quiz (v3)</h1>
       <p>70-question comprehensive quiz • spaced repetition • export/import state</p>
-    <p><strong>A study material for Àdúràgbèmí, answered prayers... </strong></p>
+   <div class="her"><p><strong>A study material for Àdúràgbèmí, answered prayers... </strong></p></div>
     </div>
   </div>
 
@@ -322,11 +326,8 @@ footer{margin-top:12px;color:var(--muted);text-align:center;font-size:13px}
     </aside>
   </div>
 
-  <footer>Made with on goal in mind, your success.<br> Let be be a testament to how much I love and cherish you. </footer>
+  <footer>Made with on goal in mind, your success.<br> Let be be a testament to how much Oyebola loves and cherishes Àṣàkẹ́. </footer>
 </div>
-
-<input id="fileLoader" type="file" accept="application/json" class="hidden">
-
 <script>
 /* ============================
   v3 — 70 QUESTIONS (50 original + 20 new)
@@ -951,6 +952,7 @@ window._PHv3 = { QUESTIONS, state, exportState, importStateText, startOrReset };
 </script>
 </body>
 </html>
+
 
 
 
