--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ footer{margin-top:12px;color:var(--muted);text-align:center;font-size:13px}
     <div class="title">
       <h1 id="mainTitle">Personal Hygiene & Dental Education — Interactive Quiz (v3)</h1>
       <p>70-question comprehensive quiz • spaced repetition • export/import state</p>
-   <div class="her"><p><strong>A study material for Àdúràgbèmí, answered prayers... </strong></p></div>
+   <div class="her"><p><strong>A study material  </strong></p></div>
     </div>
   </div>
 
@@ -326,7 +326,7 @@ footer{margin-top:12px;color:var(--muted);text-align:center;font-size:13px}
     </aside>
   </div>
 
-  <footer>Made with on goal in mind, your success.<br> Let be be a testament to how much Oyebola loves and cherishes Àṣàkẹ́. </footer>
+  <footer>Made with on goal in mind, your success. </footer>
 </div>
 <script>
 /* ============================
@@ -952,6 +952,7 @@ window._PHv3 = { QUESTIONS, state, exportState, importStateText, startOrReset };
 </script>
 </body>
 </html>
+
 
 
 
